<resources>
    <string name="app_name">Minha Biblioteca</string>
    <string name="entrar">entrar</string>
    <string name="BD">Mostrar todos os livros da BD</string>
    <string name="logout">LogOut</string>
    <string name="biblioteca">Ver Biblioteca</string>
    <string name="InserirEsteLivro">Inserir este livro</string>
    <string name="NumeroPaginas">Número de Páginas</string>
    <string name="Autor">Autor</string>
    <string name="Nome">Nome</string>
    <string name="Atualizar">Atualizar</string>
    <string name="ID">ID: </string>

</resources>
